# pge-app

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  codecov.yml  configureProject.sh  main.cpp
.github/: build-ci-docker-image.yml  check-code-style.yml  clean-branch-action-cache.yml
.github/workflows/: build-and-push.yml  build-ci-docker-image.yml  check-code-style.yml
data/: debug-tests.sh  debug.sh  profile.sh  run.sh  tests.sh  valgrind.sh
scripts/: debug.sh  profile.sh  run.sh  tests.sh
src/: App.cc  App.hh  CMakeLists.txt  DefaultApp.cc  DefaultApp.hh  DefaultApp.hxx  main.cc  main.cpp
src/app/: AppDesc.hh  AppDesc.hxx  CMakeLists.txt  ColorUtils.hh  Controls.hh  PGEApp.cc  PGEApp.hh  PGEApp.hxx  TexturePack.cc  TexturePack.hh  olcPixelGameEngine.h
src/coordinates/: CMakeLists.txt  CoordinateFrame.cc  CoordinateFrame.hxx  TopViewFrame.cc  TopViewFrame.hh  TopViewFrame.hxx  Viewport.cc  Viewport.hh  Viewport.hxx
src/core/: CMakeLists.txt  CoreException.cc  CoreObject.cc  CoreObject.hh  TimeUtils.hh  TimeUtils.hxx
src/core/log/: ILogger.hh
src/game/: CMakeLists.txt  Game.cc  Game.hh  GameState.cc  GameState.hh  SavedGames.cc  SavedGames.hh
src/lib/: App.cc  App.hh  App.hxx  CMakeLists.txt
src/lib/app/: AppDesc.hh  AppDesc.hxx  CMakeLists.txt  ColorUtils.hh  ColorUtils.hxx  Controls.hh  Controls.hxx  FramerateControl.cc  FramerateControl.hh  PGEApp.cc  PGEApp.hh  PGEApp.hxx  TexturePack.cc  TexturePack.hh  TexturePack.hxx
src/lib/coordinates/: CMakeLists.txt  CenteredViewport.hh  CenteredViewport.hxx  CoordinateFrame.cc  CoordinateFrame.hh  CoordinateFrame.hxx  IsometricViewFrame.cc  IsometricViewFrame.hh  IsometricViewFrame.hxx  TopLeftViewport.hh  TopLeftViewport.hxx  TopViewFrame.cc  TopViewFrame.hh  TransformedViewFrame.cc  TransformedViewFrame.hh  Viewport.hh  Viewport.hxx
src/lib/game/: CMakeLists.txt  Game.cc  Game.hh  Game.hxx  GameState.cc  GameState.hh  SavedGames.cc  SavedGames.hh  Screen.cc  Screen.hh
src/lib/inputs/: CMakeLists.txt  GameScreenInputHandler.cc  GameScreenInputHandler.hh  IInputHandler.cc  IInputHandler.hh  Motion.cc  Motion.hh
src/lib/renderers/: CMakeLists.txt  GameScreenRenderer.cc  GameScreenRenderer.hh  IRenderer.cc  IRenderer.hh
src/lib/ui/: Action.hh  BackgroundDesc.cc  BackgroundDesc.hh  CMakeLists.txt  GameOverScreenUiHandler.cc  GameOverScreenUiHandler.hh  HomeScreenUiHandler.cc  HomeScreenUiHandler.hh  IUiHandler.cc  IUiHandler.hh  LoadGameScreenUiHandler.cc  LoadGameScreenUiHandler.hh  Menu.hh  Menu.hxx  MenuContentDesc.cc  MenuContentDesc.hh
src/lib/ui/common/: CMakeLists.txt  ScreenCommon.cc  ScreenCommon.hh
src/lib/ui/menus/: BackgroundConfig.cc  BackgroundConfig.hh  CMakeLists.txt  MenuCommon.cc  MenuCommon.hh  MenuConfig.hh  TextConfig.cc  TextConfig.hh  UiMenu.cc  UiMenu.hh  UiTextMenu.cc  UiTextMenu.hh  UiTimedMenu.cc  UiTimedMenu.hh  UserInputData.hh
src/pge/: CMakeLists.txt
src/pge/app/: AppDesc.hh  CMakeLists.txt  Controls.cc  Controls.hh  FramerateControl.cc  FramerateControl.hh  PGEApp.cc  PGEApp.hh  RenderState.cc  RenderState.hh
src/pge/colors/: Alpha.hh  CMakeLists.txt  Color.cc  Color.hh  ColorNames.cc  ColorNames.hh  ColorSpace.cc  ColorSpace.hh  Colors.hh  RgbData.hh  Transparency.cc  Transparency.hh  Transparency.hxx
src/pge/coordinates/: CMakeLists.txt  CenteredViewport.cc  CenteredViewport.hh  CoordinateFrame.cc  CoordinateFrame.hh  IsometricViewFrame.cc  IsometricViewFrame.hh  TopLeftViewport.cc  TopLeftViewport.hh  TopViewFrame.cc  TopViewFrame.hh  TransformedViewFrame.cc  TransformedViewFrame.hh  Viewport.cc  Viewport.hh
src/pge/olc/: CMakeLists.txt  ColorConversion.cc  ColorConversion.hh  PgeWrapper.cc  PgeWrapper.hh  VectorConversion.cc  VectorConversion.hh  olcEngine.cc  olcPixelGameEngine.h
src/pge/rendering/: CMakeLists.txt  Renderer.cc  Renderer.hh  RenderingPass.cc  RenderingPass.hh  TiledBackground.cc  TiledBackground.hh
src/pge/sprites/: CMakeLists.txt  DecalResource.cc  DecalResource.hh  TexturePack.cc  TexturePack.hh
src/pge/vector/: CMakeLists.txt  Vector2d.hh  Vector2d.hxx
src/ui/: Action.hh  Action.hxx  BackgroundDesc.hh  BackgroundDesc.hxx  CMakeLists.txt  Menu.cc  Menu.hh  Menu.hxx  MenuContentDesc.hh  MenuContentDesc.hxx
tests/: CMakeLists.txt  main.cpp
tests/integration/: CMakeLists.txt  main.cc
tests/unit/: CMakeLists.txt  main.cc
tests/unit/lib/: CMakeLists.txt
tests/unit/lib/app/: CMakeLists.txt  ControlsTest.cpp
tests/unit/lib/coordinates/: CMakeLists.txt  CenteredViewportTest.cc  CenteredViewportTest.cpp  Common.cc  Common.cpp  Common.hh  CommonCoordinateFrame.cc  CommonCoordinateFrame.hh  IsometricViewFrameTest.cc  TopLeftViewportTest.cc  TopLeftViewportTest.cpp  TopViewFrameTest.cc  TopViewFrameTest.cpp
tests/unit/pge/: CMakeLists.txt
tests/unit/pge/app/: CMakeLists.txt  ControlsTest.cc
tests/unit/pge/coordinates/: CMakeLists.txt  CenteredViewportTest.cc  CommonCoordinateFrame.cc  CommonCoordinateFrame.hh  CommonViewport.cc  CommonViewport.hh  IsometricViewFrameTest.cc  TopLeftViewportTest.cc  TopViewFrameTest.cc
